# confidence_histograms

./: README.md  setup.cfg
src/confidence_histograms/: __init__.py
tests/: test_confidence_histograms.py
