[metadata]
name = confidence_histograms
version = 0.1
author = Hans Meine
author_email = hans.meine@mevis.fraunhofer.de
description = Efficient representation for assessment of model calibration in machine learning / deep learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmeine/confidence_histograms
project_urls =
    Bug Tracker = https://github.com/hmeine/confidence_histograms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src
